# flyxiv_observer_v1

./: .gitignore  README.md  collect_stream.ps1  event_config.json  events.db  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
autorecorder/: AGENT.md  build_app.ps1  package-lock.json  package.json
autorecorder/ffxiv-auto-recorder/: README.md  build_app.ps1  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
pyffxivdata/: dataset.py  experiment.py  loss.py  metric.py  model.py  train.py
pyffxivdata/config/: train_config.yml
pyobserver/: ffxiv_info_scraper.py  main.py  request_gemini.py  scheduled_event_reminder.py
pyobserver/__pycache__/: commands.cpython-313.pyc.1273335036176  commands.cpython-313.pyc.1321167685536  commands.cpython-313.pyc.1873692461072  commands.cpython-313.pyc.1982030153632  commands.cpython-313.pyc.1982618404768  commands.cpython-313.pyc.2161571166592  commands.cpython-313.pyc.2192990406560  commands.cpython-313.pyc.2311604864928  commands.cpython-313.pyc.2406291736592  commands.cpython-313.pyc.3228579792800  guild_schedule_alarm.cpython-313.pyc.1686124589488  guild_schedule_alarm.cpython-313.pyc.1737468047664  guild_schedule_alarm.cpython-313.pyc.1939509955504  guild_schedule_alarm.cpython-313.pyc.2086101545264  guild_schedule_alarm.cpython-313.pyc.2269500459952  guild_schedule_alarm.cpython-313.pyc.2529544204848  (+10 more)
scripts/: convert_pth_to_onnx.py  debug_onnx_output.py  flyxiv-observer.service  print_onnx_model_structure.py  setup_kubeflow_gcp.ps1  startup.sh
(+14 files in other folders)
